--- a/stilus.css
+++ b/stilus.css
@@ -45,13 +45,16 @@ nav ul {
 nav a {
   text-align: center;
   text-decoration: none;
+  display: inline-block;
+  width: 100%;
+  padding: 10px;
   color: rgb(0, 0, 0);
 }
 
 nav li {
   text-align: center;
   border: 1px solid grey;
-  padding: 10px;
+  padding: 0px;
   background-color: white;
 }
 
